--- a/src/components/ContactsList/ContactsList.module.css
+++ b/src/components/ContactsList/ContactsList.module.css
@@ -1,44 +1,8 @@
-.contactList {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.contactItem {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
-}
-.contactDescription {
-  margin: 12px;
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  font-family: "Franklin Gothic Medium";
-  color: rgb(83, 41, 110);
-  font-weight: 400;
-  text-transform: capitalize;
-}
-.deleteBtn {
-  display: flex;
-  align-items: center;
-  border-radius: 20px;
-  height: auto;
-  cursor: pointer;
-  margin: 12px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 25px;
-  width: 100px;
-  color: rgb(83, 41, 110);
-  border: 2px solid rgb(219, 53, 64);
-  background-color: #fff;
+/* .btn {
+  margin: 0 auto;
 }
 
-.deleteBtn:hover,
-.deleteBtn:focus {
-  color: #fff;
-  background-color: rgb(219, 53, 64);
-  font-weight: 500;
-  border: 2px solid #fff;
-}
+.box {
+  margin-top: 10px;
+  display: flex;
+} */
