--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(249, 250, 180);
+  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
 }
 .container {
   padding: 50px;
